# JARVIS

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
data/: JARVIS.postman_collection.json  data.json
src/jarvis/: ingest.py  ingestor.py  main.py  retrieval.py  run.py
src/jarvis/app/: dependencies.py  main.py
src/jarvis/app/api/models/: requests.py  responses.py
src/jarvis/app/api/routes/: documents.py  indexes.py  search.py
src/jarvis/app/api/services/: document_service.py  search_service.py
src/jarvis/domain/genai/: chunk.py  document.py  library.py
src/jarvis/domain/search/: utils.py
src/jarvis/domain/search/algorithm/: hierarchical_knn.py  linear_knn.py
src/jarvis/domain/search/vector_store/: vector_store.py
src/jarvis/infrastructure/core/: config.py  vectorstore_index_body.json
src/vector_db/domain/genai/: document.py  library.py
src/vector_db/domain/search/algorithm/: linear_knn.py
